maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: ')' expected but $XMLSTART$< found.
    while (compteur <h*l-3)
                    ^ShortestPathMaze:32: error: ';' expected but ')' found.
  while (!estSurBiscuit() && !porteBiscuit() && getIndication(getX(),getY())>0)
                                                                              ^